--- a/service-client/service-list-client/pom.xml
+++ b/service-client/service-list-client/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service-list-client</artifactId>
+    <version>1.0</version>
 
 
 </project>
