es结束，进入sso、网关

--- a/web/web-all/pom.xml
+++ b/web/web-all/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>service-product-client</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.xuanhe.gmall</groupId>
+            <artifactId>service-list-client</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
