--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>model</module>
         <module>web</module>
         <module>service-client</module>
+        <module>server-gateway</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
