--- a/service/service-user/pom.xml
+++ b/service/service-user/pom.xml
@@ -3,21 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>parent</artifactId>
+        <artifactId>service</artifactId>
         <groupId>com.xuanhe.gmall</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>service</artifactId>
-    <packaging>pom</packaging>
     <version>1.0</version>
-    <modules>
-        <module>service-product</module>
-        <module>service-item</module>
-        <module>service-list</module>
-        <module>service-user</module>
-    </modules>
+    <artifactId>service-user</artifactId>
 
     <dependencies>
         <dependency>
@@ -25,13 +17,7 @@
             <artifactId>service-util</artifactId>
             <version>1.0</version>
         </dependency>
-
-<!--        <dependency>-->
-<!--            <groupId>com.xuanhe.gmall</groupId>-->
-<!--            <artifactId>model</artifactId>-->
-<!--            <version>1.0</version>-->
-<!--        </dependency>-->
-
     </dependencies>
+
 
 </project>
