--- a/service-client/pom.xml
+++ b/service-client/pom.xml
@@ -16,6 +16,7 @@
         <module>service-product-client</module>
         <module>service-item-client</module>
         <module>service-list-client</module>
+        <module>service-user-client</module>
     </modules>
 
     <dependencies>
