--- a/service/pom.xml
+++ b/service/pom.xml
@@ -18,6 +18,7 @@
         <module>service-list</module>
         <module>service-user</module>
         <module>service-cart</module>
+        <module>service-order</module>
     </modules>
 
     <dependencies>
