--- a/service-client/pom.xml
+++ b/service-client/pom.xml
@@ -18,6 +18,7 @@
         <module>service-list-client</module>
         <module>service-user-client</module>
         <module>service-cart-client</module>
+        <module>service-order-client</module>
     </modules>
 
     <dependencies>
