--- a/service/service-order/src/main/resources/application-dev.yml
+++ b/service/service-order/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ server:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-  mapper-locations: classpath:com/atguigu/gmall/*/mapper/*.xml
+  mapper-locations: mapper/*.xml
 feign:
   sentinel:
     enabled: true
