--- a/web/web-all/pom.xml
+++ b/web/web-all/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>service-cart-client</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.xuanhe.gmall</groupId>
+            <artifactId>service-order-client</artifactId>
+            <version>1.0</version>
+        </dependency>
 
     </dependencies>
 
