--- a/service/service-payment/src/main/resources/application-dev.yml
+++ b/service/service-payment/src/main/resources/application-dev.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8204
+  port: 8205
 
 mybatis-plus:
   configuration:
@@ -35,7 +35,7 @@ spring:
     publisher-returns: true
     listener:
       simple:
-        acknowledge-mode: manual #默认情况下消息消费者是自动确认消息的，如果要手动确认消息则需要修改确认模式为manual
+        cknowledge-mode: manual #默认情况下消息消费者是自动确认消息的，如果要手动确认消息则需要修改确认模式为manual
         prefetch: 1 # 消费者每次从队列获取的消息数量。此属性当不设置时为：轮询分发，设置为1为：公平分发
   redis:
     host: 47.115.74.81
@@ -66,6 +66,3 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
-# 配置的是我们仓库系统的地址
-ware:
-  url: http://localhost:9001
