--- a/common/pom.xml
+++ b/common/pom.xml
@@ -15,6 +15,7 @@
         <module>common-util</module>
         <module>service-util</module>
         <module>web-util</module>
+        <module>rabbit-util</module>
     </modules>
     <dependencies>
         <dependency>
