下一步，实现查询支付状态的消费者代码

--- a/service/service-payment/pom.xml
+++ b/service/service-payment/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>alipay-sdk-java</artifactId>
             <version>4.8.73.ALL</version>
         </dependency>
+        <dependency>
+            <groupId>com.xuanhe.gmall</groupId>
+            <artifactId>rabbit-util</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
