--- a/service/service-list/pom.xml
+++ b/service/service-list/pom.xml
@@ -22,7 +22,11 @@
             <artifactId>service-product-client</artifactId>
             <version>1.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.xuanhe.gmall</groupId>
+            <artifactId>rabbit-util</artifactId>
+            <version>1.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
