--- a/service/service-order/pom.xml
+++ b/service/service-order/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>service-user-client</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.xuanhe.gmall</groupId>
+            <artifactId>rabbit-util</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
