--- a/service/service-product/pom.xml
+++ b/service/service-product/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>service-list-client</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.xuanhe.gmall</groupId>
+            <artifactId>rabbit-util</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
