--- a/service-client/pom.xml
+++ b/service-client/pom.xml
@@ -19,6 +19,7 @@
         <module>service-user-client</module>
         <module>service-cart-client</module>
         <module>service-order-client</module>
+        <module>service-activity-client</module>
     </modules>
 
     <dependencies>
