--- a/service/pom.xml
+++ b/service/pom.xml
@@ -20,7 +20,8 @@
         <module>service-cart</module>
         <module>service-order</module>
         <module>service-payment</module>
-        <module>service-mq</module>
+        <module>service-activity</module>
+        <module>service-task</module>
     </modules>
 
     <dependencies>
