--- a/service/service-activity/pom.xml
+++ b/service/service-activity/pom.xml
@@ -3,17 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>web</artifactId>
+        <artifactId>service</artifactId>
         <groupId>com.xuanhe.gmall</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <version>1.0</version>
+    <artifactId>service-activity</artifactId>
 
-    <artifactId>web-all</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.xuanhe.gmall</groupId>
-            <artifactId>service-item-client</artifactId>
+            <artifactId>service-user-client</artifactId>
             <version>1.0</version>
         </dependency>
         <dependency>
@@ -23,25 +24,29 @@
         </dependency>
         <dependency>
             <groupId>com.xuanhe.gmall</groupId>
-            <artifactId>service-list-client</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.xuanhe.gmall</groupId>
-            <artifactId>service-cart-client</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.xuanhe.gmall</groupId>
             <artifactId>service-order-client</artifactId>
             <version>1.0</version>
         </dependency>
         <dependency>
             <groupId>com.xuanhe.gmall</groupId>
-            <artifactId>service-activity-client</artifactId>
+            <artifactId>rabbit-util</artifactId>
             <version>1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.xuanhe.gmall</groupId>
+            <artifactId>service-util</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
+    <build>
+        <finalName>service-activity</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
