秒杀基本完成

--- a/service/service-activity/pom.xml
+++ b/service/service-activity/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>service-util</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.xuanhe.gmall</groupId>
+            <artifactId>service-order-client</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
