--- a/service/service-item/pom.xml
+++ b/service/service-item/pom.xml
@@ -19,6 +19,11 @@
         </dependency>
         <dependency>
             <groupId>com.xuanhe.gmall</groupId>
+            <artifactId>rabbit-util</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.xuanhe.gmall</groupId>
             <artifactId>service-list-client</artifactId>
             <version>1.0</version>
         </dependency>
