--- a/web/web-all/pom.xml
+++ b/web/web-all/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>service-activity-client</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.xuanhe.gmall</groupId>
+            <artifactId>service-user-client</artifactId>
+            <version>1.0</version>
+        </dependency>
 
     </dependencies>
 
