--- a/service/service-product/src/main/resources/application.properties
+++ b/service/service-product/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8081
 
 # Êý¾ÝÔ´
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://47.115.74.81:3307/gmall_product?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://192.168.200.128:3306/gmall_product?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 
 # dao²ã
 mybatis-plus.mapper-locations=classpath:mapper/*Mapper.xml
