--- a/ware-manage/src/main/resources/application-dev.yml
+++ b/ware-manage/src/main/resources/application-dev.yml
@@ -43,9 +43,9 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://47.115.74.81:3307/gmall_ware?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://192.168.200.128:3306/gmall_ware?characterEncoding=utf-8&useSSL=false
     username: root
-    password: 123456
+    password: root
     hikari:
       connection-test-query: SELECT 1
       connection-timeout: 60000
